[package]
description = "crate to generate a boot.dat from a custom payload for the switch"
edition = "2021"
license-file = "LICENSE"
name = "tx-custom-boot"
repository = "https://github.com/marcograss/tx-custom-boot"
version = "0.3.0"

[dependencies]
binwrite = "0.2.1"
conv = "0.3.3"
sha2 = "0.10.7"
thiserror = "2.0.3"

[dev-dependencies]
hex-literal = "0.4.1"
